[fix] User entity 수정 #1
기존에 username으로 provider와 providerId를 받는 것을 분할
소셜 로그인에서 name필드가 회원가입시 nickname으로 설정되도록 변경
기존에 소셜 로그인에서 userprofile이 추가되지 않던 문제 해결